@@ -1,3 +1,8 @@
+2010-09-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/45458
+	* g++.dg/tree-prof/partition2.C: New test.
+
 2010-08-31  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.dg/nested-func-8.c: New test.
